# 2501.15649_review

./: CMakeLists.txt  darkgauge_model.py  findbounce.py  main.cpp  thermal_functions.py
bounce_solver/: bounce_solver_dim3.cpp  bounce_solver_dim3.h  bounce_solver_dim4.cpp  bounce_solver_dim4.h
data/: g_eff_data.csv  gp_eff_data.csv  h_eff_data.csv  i_eff_data.csv  sm_eff_data.csv
math_personal/: sf_bessel_k.cpp  sf_bessel_k.h  sf_trig.cpp  sf_trig.h
potential/: dark_abelian_higgs.cpp  dark_abelian_higgs.h
standard_cosmology/: constant.hpp  cosmology.cpp  cosmology.h
thermal_function/: thermal_functions.cpp  thermal_functions.h
util/: csv_importer.cpp  csv_importer.h
